<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_not_data_found"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nodry.nodry.Presentacion.FiltersActivity"
    tools:showIn="@layout/activity_filters">

    <Button
        android:text="@string/botonFiltrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_filtrar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="Filtros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_Filtros"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/comunidadAutonoma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/lbl_filter_CCAA"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_below="@+id/lbl_Filtros"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:id="@+id/spinner_CCAA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_filter_CCAA"

        android:layout_marginTop="10dp"
        android:layout_alignLeft="@id/lbl_filter_CCAA"/>
    <TextView
        android:id="@+id/textViewFiltros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tipoCombustible"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_below="@+id/spinner_CCAA"
        android:layout_alignLeft="@+id/lbl_filter_CCAA"
        />
    <Spinner
        android:id="@+id/spinner_TiposGasolina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewFiltros"
        android:layout_alignLeft="@id/lbl_filter_CCAA"
        android:layout_marginTop="10dp"/>


        <TextView
            android:id="@+id/infoMaximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/maximo"
            android:layout_alignLeft="@+id/lbl_filter_CCAA"
            android:layout_below="@+id/spinner_TiposGasolina"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
        <EditText
            android:id="@+id/editText_maximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:hint="@string/valor0"
            android:layout_below="@+id/infoMaximo"
            android:layout_alignLeft="@id/lbl_filter_CCAA"
            android:layout_marginTop="10dp"
            android:maxLength="10"
            android:paddingLeft="5dp"
            />





</RelativeLayout>